Add Test.html, Finish BlinkStatus.js

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="DiagramStoveDll/Rectangle.js"></script>
     <script src="DiagramStoveDll/PercentColumn.js"></script>
     <script src="DiagramStoveDll/ProcessColumn.js"></script>
+    <script src="DiagramStoveDll/BlinkStatus.js"></script>
     <script src="Diagram.js"></script>
 </body>
 </html>
