--- a/test.html
+++ b/test.html
@@ -8,9 +8,14 @@
     <canvas id="canvas" style="margin:0px; padding:0px"></canvas>
 
     <div>
+        <input id="PText" type="checkbox"style=" margin:10px 0px 10px 10px;"> Text
+        <input id="DefData" type="checkbox" style=" margin:10px 0px 10px 10px;"> Default Data
+
         <input id="TestPercent" type="button" value="Test Percent" style=" margin:10px;"/>
         <input id="TestProcess" type="button" value="Test Process" style=" margin:10px;" />
         <input id="TestBlinkStatus" type="button" value="Test Blink" style=" margin:10px;" />
+        <input id="TestNumberColumn" type="button" value="Test Number" style=" margin:10px;" />
+
 
     </div>
 
@@ -19,6 +24,8 @@
     <script src="DiagramStoveDll/PercentColumn.js"></script>
     <script src="DiagramStoveDll/ProcessColumn.js"></script>
     <script src="DiagramStoveDll/BlinkStatus.js"></script>
+    <script src="DiagramStoveDll/NumberColumn.js"></script>
+
     <script src="Test.js"></script>
 </body>
 </html>
