--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
         <input id="TestProcess" type="button" value="Test Process" style=" margin:10px;" />
         <input id="TestBlinkStatus" type="button" value="Test Blink" style=" margin:10px;" />
         <input id="TestNumberColumn" type="button" value="Test Number" style=" margin:10px;" />
-
+        <input id="TestDiagramStove" type="button" value="Test Diagram" style=" margin:10px;" />
 
     </div>
 
@@ -25,7 +25,7 @@
     <script src="DiagramStoveDll/ProcessColumn.js"></script>
     <script src="DiagramStoveDll/BlinkStatus.js"></script>
     <script src="DiagramStoveDll/NumberColumn.js"></script>
-
+    <script src="DiagramStoveDll/DiagramStove.js"></script>
     <script src="Test.js"></script>
 </body>
 </html>
