Переведены все классы в функции.

--- a/test.html
+++ b/test.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <title>Diagram Stoves</title>
+    <!--[if lt IE 9]>
+            <script src="Scripts/html5shiv.min.js"></script>        
+    <![endif]-->
 </head>
 <body style="margin:0px; padding:0px">
     <canvas id="canvas" style="margin:0px; padding:0px"></canvas>
@@ -16,7 +19,8 @@
         <input id="TestBlinkStatus" type="button" value="Test Blink" style=" margin:10px;" />
         <input id="TestNumberColumn" type="button" value="Test Number" style=" margin:10px;" />
         <input id="TestDiagramStove" type="button" value="Test Diagram" style=" margin:10px;" />
-
+        <input id="TestPost" value="Test Post" style=" margin:10px;" type="button">
+        <input id="ChkLoop" type="checkbox" style=" margin:10px 0px 10px 10px;"> Loop
     </div>
 
     <script src="Scripts/jquery-3.3.1.min.js"></script>
