Add Rotate column.

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
     </div>
 
     <script src="Scripts/jquery-3.3.1.min.js"></script>
-    <!--<script src="DiagramStoveDll/Rectangle.js"></script>
+    <script src="DiagramStoveDll/Rectangle.js"></script>
     <script src="DiagramStoveDll/PercentColumn.js"></script>
     <script src="DiagramStoveDll/ProcessColumn.js"></script>
     <script src="DiagramStoveDll/BlinkStatus.js"></script>
     <script src="DiagramStoveDll/NumberColumn.js"></script>
-    <script src="DiagramStoveDll/DiagramStove.js"></script>-->
-	<script src="diagram.min.js"></script>
-    <!--<script src="test.js"></script>-->
-	<script src="test.min.js"></script>
+    <script src="DiagramStoveDll/DiagramStove.js"></script>
+	<!--<script src="diagram.min.js"></script>-->
+    <script src="test.js"></script>
+	<!--<script src="test.min.js"></script>-->
 </body>
 </html>
