Change main page

--- a/index.html
+++ b/index.html
@@ -1,51 +1,57 @@
 ﻿<!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
     <meta charset="utf-8" />
-    <title>Diagram Stoves</title>
-    <!--[if lt IE 9]>
-            <script src="Scripts/html5shiv.min.js"></script>        
-    <![endif]-->
+    <title>Текущий статус печей</title>
+    <link rel="stylesheet" type="text/css" href="Content/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="Content/Main.css">
 </head>
-<body style="margin:0px; padding:0px">
-    <canvas id="canvas" style="margin:0px; padding:0px"></canvas>
+<body>
+    <div class="container-fluid">
+        <div id="First_Head" class="row m-0 pl-1 pr-1 pt-1 pb-0">
+            <div id="Main" class="col-12 text-center">
+                Диаграмма статуса печей
+            </div>
+        </div>
+        <div id="Second_Head" class="row m-0 pl-1 pr-1 pt-0 pb-1 align-items-center">
+            <div class="col-12 col-sm-6 col-lg-3 text-center">
+                Время: <span id="DateTimeNow">2018.02.27 08:41:24</span>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 text-center">
+                Обнов: <span id="DateUpdate"></span>
+            </div>
+            <div id="Error_Border" class="col-12 col-lg-6 text-center m-0
+                 alert alert-danger alert-dismissible fade show" style="display:none;" role="alert">
+                <strong>Ошибка: </strong> <span id="Error_Message">Здесь будет текст ошибки</span>
+                <button id="Update_Button" type="button" class="close" aria-label="Close">⭮</button>
+            </div>
+        </div>
 
-    <div id="legend1">
-        <div style="display:inline-block; margin:0px 5px 0px 20px; background-color: #0ff ; padding:19px 19px 0px 0px;"></div> Выгрузка-загрузка,
-        <div style="display:inline-block; margin:0px 5px 0px 0px; background-color: #00f ; padding:19px 19px 0px 0px;"></div> Вакуумирование,
-        <div style="display:inline-block; margin:0px 5px 0px 0px; background-color: #f00 ; padding:19px 19px 0px 0px;"></div> Токовая операция,
-        <div style="display:inline-block; margin:0px 5px 0px 0px; background-color: #0f0 ; padding:19px 19px 0px 0px;"></div> Охлаждение,
-        <div style="display:inline-block; margin:0px 5px 0px 0px; background-color: #8500b6 ; padding:19px 19px 0px 0px;"></div> Разведение,
-        <div style="display:inline-block; margin:0px 5px 0px 0px; background-color: #f0f ; padding:19px 19px 0px 0px;"></div> ВУР
-    </div>
-    <div id="legend2">
-        <div style="display:inline-block; height:9px; margin:10px 5px 0px 20px; background-color: #00f ; padding:0px 19px 0px 0px;"></div> Приварка,
-        <div style="display:inline-block; height:9px; margin:10px 5px 0px 0px; background-color: #0f0 ; padding:0px 19px 0px 0px;"></div> Плавка,
-        <div style="display:inline-block; height:9px; margin:10px 5px 0px 0px; background-color: #f00 ; padding:0px 19px 0px 0px;"></div> Оплав
-    </div>
-    <div id="buttons" style="display:inline;">
-        <input id="PText" type="checkbox" style=" margin:10px 0px 10px 10px;"> Text
-        <input id="DefData" type="checkbox" style=" margin:10px 0px 10px 10px;"> Default Data
+        <div id="Canvas_Body">
+            <canvas> </canvas>
+        </div>
 
-        <input id="TestPercent" type="button" value="Test Percent" style=" margin:10px;" />
-        <input id="TestProcess" type="button" value="Test Process" style=" margin:10px;" />
-        <input id="TestBlinkStatus" type="button" value="Test Blink" style=" margin:10px;" />
-        <input id="TestNumberColumn" type="button" value="Test Number" style=" margin:10px;" />
-        <input id="TestDiagramStove" type="button" value="Test Diagram" style=" margin:10px;" />
-        <input id="TestPost" type="button" value="Test Post" style=" margin:10px;" />
-        <input id="ChkLoop" type="checkbox" style=" margin:10px 0px 10px 10px;"> Loop
-        <div id="DateUpdate" style=" margin:10px 0px 10px 10px; display:inline;"></div>
-    </div>
+        <div id="Third_Head" class="row m-0 pl-1 pr-1 pt-0 pb-0 align-items-center">
+            <div class="col-12 text-left">
+                <span style="display:inline-block; margin:0px 5px 0px 0px; background-color: #0ff ; padding:10px;"></span>Выгрузка-загрузка,
+                <span style="display:inline-block; margin:0px 5px 0px 0px; background-color: #00f ; padding:10px;"></span>Вакуумирование,
+                <span style="display:inline-block; margin:0px 5px 0px 0px; background-color: #f00 ; padding:10px;"></span>Токовая операция,
+                <span style="display:inline-block; margin:0px 5px 0px 0px; background-color: #0f0 ; padding:10px;"></span>Охлаждение,
+                <span style="display:inline-block; margin:0px 5px 0px 0px; background-color: #8500b6 ; padding:10px;"></span>Разведение,
+                <span style="display:inline-block; margin:0px 5px 0px 0px; background-color: #f0f ; padding:10px;"></span>ВУР
+            </div>
+            <div class="col-12 text-left">
+                <span style="display:inline-block; height:9px; margin:10px 5px 0px 0px; background-color: #00f ; padding:0px 19px 0px 0px;"></span>Приварка,
+                <span style="display:inline-block; height:9px; margin:10px 5px 0px 0px; background-color: #0f0 ; padding:0px 19px 0px 0px;"></span>Плавка,
+                <span style="display:inline-block; height:9px; margin:10px 5px 0px 0px; background-color: #f00 ; padding:0px 19px 0px 0px;"></span>Оплав
+            </div>
+        </div>
 
-    <script src="Scripts/jquery-3.3.1.min.js"></script>
-    <script src="DiagramStoveDll/Rectangle.js"></script>
-    <script src="DiagramStoveDll/PercentColumn.js"></script>
-    <script src="DiagramStoveDll/ProcessColumn.js"></script>
-    <script src="DiagramStoveDll/BlinkStatus.js"></script>
-    <script src="DiagramStoveDll/NumberColumn.js"></script>
-    <script src="DiagramStoveDll/DiagramStove.js"></script>
-	<!--<script src="diagram.min.js"></script>-->
-    <script src="test.js"></script>
-	<!--<script src="test.min.js"></script>-->
+        <script src="Scripts/jquery-3.3.1.min.js"></script>
+        <script src="Scripts/popper.min.js"></script>
+        <script src="Scripts/bootstrap.min.js"></script>
+        <script src="diagram.min.js"></script>
+        <script src="index.js"></script>
+    </div>
 </body>
 </html>
