--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Текущий статус печей</title>
+    <title>123</title>
+    <!--[if lt IE 9]>
+            <script src="Scripts/html5shiv.min.js"></script>
+    <![endif]-->
     <link rel="stylesheet" type="text/css" href="Content/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="Content/Main.css">
 </head>
@@ -23,7 +26,7 @@
             <div id="Error_Border" class="col-12 col-lg-6 text-center m-0
                  alert alert-danger alert-dismissible fade show" style="display:none;" role="alert">
                 <strong>Ошибка: </strong> <span id="Error_Message">Здесь будет текст ошибки</span>
-                <button id="Update_Button" type="button" class="close" aria-label="Close">⭮</button>
+                <button id="Update_Button" type="button" class="close" aria-label="Close">&#8635;</button>
             </div>
         </div>
 
@@ -50,8 +53,8 @@
         <script src="Scripts/jquery-3.3.1.min.js"></script>
         <script src="Scripts/popper.min.js"></script>
         <script src="Scripts/bootstrap.min.js"></script>
-        <script src="diagram.min.js"></script>
-        <script src="index.js"></script>
+        <script src="Scripts/diagram.min.js"></script>
+        <script src="Scripts/index.min.js"></script>
     </div>
 </body>
 </html>
