--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>123</title>
+    <title>Текущий статус печей</title>
     <!--[if lt IE 9]>
             <script src="Scripts/html5shiv.min.js"></script>
     <![endif]-->
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="Content/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="Content/Main.css">
 </head>
